QuteScoop Changelog - Version 1.0.2 alpha

* Loading of navigation database in the XPlane 9 format. This is a free
  database that can be downloaded from http://data.x-plane.com
* Plotting of flight route according to the filed flight plan

QuteScoop Changelog - Version 1.0.1

* Improved support for 3rd party networks (example MCDU)

QuteScoop Changelog - up to Version 1.0.0

Iteration 1
* Create a work environment based on Eclipse and QT4 on Mac
* Create a basic application that shows some OpenGL content and a menue.
* Show a globe in the OpenGL window (port code from Dolomynum)
* Parse whazzup.txt
* Show aircraft positions from whazzup.txt on the globe

Iteration 2
* Parse FIR boundaries
* Show ATC from whazzup.txt on the globe
* Show aircraft labels

Iteration 3
* read airport data
* show online TWR/APP on map
* Show airport labels if staffed or aircraft depart/arrive
* show ATC label (for centers)
* Port to Linux

Iteration 4
* fix the memory leak
* fix the framerate
* read firdisplay.sup
* Download whazzup from IVAO + VATSIM
* Download whazzup.txt from user-defined networks (requires a status.txt for now)

Iteration 5
* Display basic Information about clients
* Display information popup window when clicking on a pilot
* Allow to click on map, show popup with nearby pilots in a popup

Iteration 6
* Allow to click on map, show popup with nearby ATC/pilots/airports
* Display airport details window
* Display tooltip for center positions at the label
* automatic download in configurable intervals
* Make it work on windows

Iteration 7
* Create public SVN repository of the source code
* Crashes sometimes with VATSIM data.
* Create a user option to read firdisplay.sup or not (no matter if the file is there or not)
* implement search

Iteration 8
* Make all tables sortable by any column
* User can click anywhere on a text label to display information
* fix broken sectors (self-intersecting polygons, FIRs not being displayed)